# v0agent

./: .coverage  .cursorrules  .dockerignore  .env.example  .gigaignore  .gitignore  .railway-trigger  CLAUDE.md  CUTOVER_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.mcp  GIGA_PLAN.md  INFRASTRUCTURE_SUMMARY.md  INTEGRATION_QUICK_START.md  JSON_UI_BEST_PRACTICES.md  MIGRATION_MANIFEST.md  MINDMAP_RAG_COMPLETION_SUMMARY.md  MINDMAP_RAG_IMPLEMENTATION_CHECKLIST.md  MULTI_AGENT_ARCHITECTURE.md  Makefile  NEXT_PHASE_PLAN.md  PHASED_MIGRATION_ROLLOUT.md  PHASE_1_COMPLETE.md  POCKET_EDIT_MEETING_IMPLEMENTATION.md  PROJECT_STATUS_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTORING_BEST_PRACTICES.md  REFACTORING_SUMMARY.md  TESTING_STRATEGY.md  agent.db.backup  docker-compose.yaml  migrate_add_dates.py  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  test_all.sh  test_compile.sh  (+3 more)
.giga/: specifications.json
.github/: copilot-instructions.md
config/: default.yaml  development.yaml  guardrails.yaml  model_routing.yaml  production.yaml  ui.json  ui.schema.json
docs/: ARCHITECTURE_REFACTORING_PLAN.md  CI_CD_PIPELINE.md  CLAUDE.md  CLI_GUIDE.md  FIRST_MULTI_AGENT_USE_CASE.md  GITHUB_INTEGRATION_SPEC.md  MINDMAP_RAG_ARCHITECTURE.md  MINDMAP_RAG_IMPLEMENTATION_COMPLETE.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_SESSION_SUMMARY.md  README.md  REFACTORING_TRACKER.md  REPOSITORY_PATTERN_REFACTOR.md  SUPABASE_MIGRATION_PLAN.md  TECHNICAL_ARCHITECTURE.md
mobile/: .gitignore  BUILD_APK.md  README.md  app.json  babel.config.js  eas.json  jest.config.js  jest.setup.js  package.json  tsconfig.json
notebooks/: dev_tools.ipynb  getting_started.ipynb  sdk_examples.ipynb
sandbox/: __init__.py
scripts/: add_signals_json.py  backfill_embeddings.py  backfill_signals.py  backfill_titles.py  check_content.py  check_data_eng_docs.py  check_doc_meeting.py  check_doc_mismatches.py  check_jan26.py  check_specific.py  clean_all_data.py  clean_meetings.py  debug_parser.py  dev_cli.py  fix_career_profile.py  fix_doc_meeting.py  fix_doc_meeting_mismatches.py  fix_document_meeting_links.py  fix_meeting_dates.py  fix_meeting_json_encoding.py  fix_meeting_names.py  fix_meetings.py  fix_rx_documents.py  generate_openapi.py  investigate_meetings.py  json_parsing_fix.py  list_meetings.py  (+19 more)
sdk/signalflow/: README.md  __init__.py  analyst.py  async_client.py  client.py  models.py  py.typed  pyproject.toml
sdk/signalflow/signalflow_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/signalflow/tests/: __init__.py  test_async_client.py  test_client.py
(+479 files in other folders)
